# docker-gadgets

./: .editorconfig  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: docker-gadgets.pc.in  package.cmake  utils.cmake
lib/: CMakeLists.txt
lib/docker-gadgets/: CMakeLists.txt  apt.sh  text-utils.sh  usage.sh
